skills/alexa-sports-narrator/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexa-sports-narrator-site
  namespace: default
spec:
  selector:
    app: alexa-sports-narrator-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
