skills/alexa-sports-narrator/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alexa-sports-narrator-site-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - alexa-sports-narrator.machina.gg
      secretName: alexa-sports-narrator-tls
  rules:
    - host: alexa-sports-narrator.machina.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alexa-sports-narrator-site
                port:
                  number: 80
